
<b>IMPROVED:</b><br/>
    &#8226; Layout and sizing optimizations for Talon layout<br/>
    &#8226; Super smooth scrolling optimizations<br/>
    &#8226; Higher quality profile pictures<br/>
    &#8226; Management of Talon Pull and keeping it active<br/>
    &#8226; Remade the tweet viewer layout<br/>
    &#8226; Much better image sizing on tweet viewer<br/>
    &#8226; Photo viewer tweeks<br/>
    &#8226; New time format on tweets for better sizing<br/>
    &#8226; Changed the conversation and discussion style<br/>
    &#8226; Opening notifications will now take you to the correct place<br/>
    &#8226; Auto-complete of users. Opening their profile will now make them searchable<br/>
    &#8226; Much more efficient and useful highlighting of users, hashtags, and links<br/>
    &#8226; Ability to open retweeters profile when viewing a retweet<br/>
    &#8226; Displaying links on timeline<br/>
    &#8226; Uploading new profile and banner pictures<br/>
    &#8226; Don't blur the banner picture in the drawer. Will have to clear cache for this to take effect<br/>
    &#8226; Displaying and sharing Twitter picture links<br/>
    &#8226; Hashtag muting support, works on mentions now too<br/>
    &#8226; Set up so themers could use a transparent action bar if they would like<br/>
    &#8226; Retweets from Talon Pull in interactions drawer, they now stack on top of each other instead of creating an instance for every new one.<br/>
    &#8226; Theme selection<br/>
    &#8226; Better support for multiple links in tweets<br/>
    &#8226; Doesn't reset search when device is rotated<br/>
    &#8226; Typos and casing in settings<br/>
    &#8226; Cleaned up advanced settings<br/>
    &#8226; User names in action bar on profile viewer<br/>
    &#8226; Better management of live streaming unread count<br/>
    &#8226; Management of widget updates<br/>
    &#8226; A bit larger auto-complete box<br/>
    &#8226; Better memory management again<br/>