@@ -50,6 +50,7 @@ Here is just a little something to make this horrible Monday a little bit better
 - Much better image sizing on tweet viewer
 - Faster and more efficient loading of data on the timelines
 - Photo viewer tweeks
+- Unread count for live streaming
 - New time format on tweets for better sizing
 - Changed the conversation and discussion style
 - Opening notifications will now take you to the correct place
